--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.6.0
 Django==4.1.6
+django_debug_toolbar==3.8.1
 et-xmlfile==1.1.0
 openpyxl==3.1.0
+Pillow==9.4.0
 psycopg2==2.9.5
 sqlparse==0.4.3
 tzdata==2022.7
